Modify url to https://wangyangkai.github.io

--- a/themes/hexo-theme-xups-1.0.1/layout/_partial/footer.ejs
+++ b/themes/hexo-theme-xups-1.0.1/layout/_partial/footer.ejs
@@ -6,6 +6,6 @@
         2014-<%- new Date().getFullYear() %>
     <% } %>
 
-    <a href="<%- url_for() %>">Jelon Loves You</a>
+    <a href="<%- url_for() %>">王阳开</a>
 </footer>
 <div class="back-to-top" id="JELON__backToTop" title="返回顶部">返回顶部</div>
